// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsModal > should render properly 1`] = `
<div>
  <div
    class="_settings_menu_21fdeb _close_21fdeb _left_21fdeb"
    id="crypto-mock-random-UUID-1234"
  >
    <ul
      class="_menu_21fdeb"
    />
    <button
      class="_opener_21fdeb"
    >
      <svg
        aria-hidden="true"
        class="_icon_2be8fc _primary_2be8fc _opener_icon_21fdeb"
        fill="currentColor"
        viewBox="0 0 4 15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SettingsModal > should render with items 1`] = `
<div>
  <div
    class="_settings_menu_21fdeb _close_21fdeb _left_21fdeb"
    id="crypto-mock-random-UUID-1234"
  >
    <ul
      class="_menu_21fdeb"
    >
      <li>
        <span>
          item 1
        </span>
      </li>
      <li>
        <span>
          item 2
        </span>
      </li>
      <li>
        <span>
          item 3
        </span>
      </li>
    </ul>
    <button
      class="_opener_21fdeb"
    >
      <svg
        aria-hidden="true"
        class="_icon_2be8fc _primary_2be8fc _opener_icon_21fdeb"
        fill="currentColor"
        viewBox="0 0 4 15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
